<resources>
    <string name="app_name">ResikApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Recyling</string>
    <string name="title_notifications">Setting</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun_login_disini">Sudah punya akun ? </string>
    <string name="password">Password</string>
    <string name="nomer_hp">nomer hp</string>
    <string name="alamat_email">alamat email</string>
    <string name="register">REGISTER</string>
    <string name="user_name">user name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="how_can_you_nrecycle_your_remaining_waste">How can you\nRecycle your remaining waste</string>
    <string name="with_you_we_will_help_ecology">With you we will help ecology</string>
    <string name="my_waste_pick_up">Recycle Your Wasted</string>
    <string name="pick_up">Pickup</string>
    <string name="education">Education</string>
    <string name="request_for_pick_up">Request for pick up</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun ?  </string>
    <string name="gallery">gallery</string>
    <string name="analyze">analyze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">hasil</string>
    <string name="location">location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="name">Arnold Armando Suwuh</string>
    <string name="more_services">More services</string>
    <string name="gmail">arnoldarmando07@gmail.com</string>
    <string name="gg">gg</string>
<<<<<<< HEAD
    <string name="detailPesanan">Detail Pesanan</string>
    <string name="pilihSatu">Silahkan pilih salah satu</string>
    <string name="newPesanan">Pesanan Terbaru</string>
    <string name="noPesanan">Belum Ada Pesanan</string>
    <string name="dataUnavailable">Data tidak tersedia</string>
    <string name="detailEducation">Education Detail</string>
    <string name="titleEducation">Education</string>
    <string name="subTitleEducation">We are here to help you understand and care more about waste</string>
    <string name="home1">How can you</string>
    <string name="home2">Recycle your remaining waste</string>
    <string name="home3">With you we will help ecology</string>
    <string name="addData">Tambah Data</string>
    <string name="inputAdress">Masukkan Alamat</string>
    <string name="addPikup">Tambah PickUp</string>
    <string name="History">History</string>
    <string name="noHistory">Belum Ada History</string>
    <string name="inputName">Nama: </string>
    <string name="inputAdr">Alamat: </string>
    <string name="inputWeight">Berat</string>
    <string name="inputPrice">Harga</string>
    <string name="btnSave">Save</string>
=======
    <string name="logout">logout</string>
    <string name="resikapp">ResikApp</string>
>>>>>>> 4495d8dd372142038e40b587be3dd186708b7bdc
</resources>