<!-- res/layout/fragment_detail.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputName"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/alamatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputAdr"
        android:textSize="18sp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/beratEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputWeight"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/hargaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputPrice"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:padding="8dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:padding="16dp"
        android:layout_marginTop="16dp" />
</LinearLayout>
