<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="16dp">

    <TextView
        android:id="@+id/tambahDataTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addData"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:fontFamily="@font/poppins_semibold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputAdress"
                android:padding="16dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/addPickupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addPikup"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/History"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/nullTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noHistory"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataUnavailable"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone"
        android:textColor="#FF0000"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
