<!-- res/layout/activity_pick_up_worker.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="16dp">
    <TextView
        android:id="@+id/detailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailPesanan"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilihSatu"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="visible"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/onComingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPesanan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:id="@+id/nullTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noPesanan"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataUnavailable"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone"
        android:textColor="#FF0000"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/onComingRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1" />



</LinearLayout>
