<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.resikapp.ui.homeui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_recycling"
            app:destination="@id/navigation_recycling" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recycling"
        android:name="com.example.resikapp.ui.homeui.recycling.RecyclingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_recycling_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.resikapp.ui.homeui.setting.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.resikapp.ui.homeui.recycling.ResultFragment"
        android:label="fragment_result"
        tools:layout="@layout/fragment_result"
        />
</navigation>