<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:paddingBottom="4dp"
    android:paddingHorizontal="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_shape"
                android:paddingTop="39dp"
                android:paddingBottom="22dp"
                android:layout_marginBottom="64dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="28dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/how_can_you_nrecycle_your_remaining_waste"
                    android:textSize="26sp" />
                <TextView
                    android:textColor="#808080"
                    android:textSize="14sp"
                    android:layout_marginBottom="74dp"
                    android:layout_marginStart="28dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/with_you_we_will_help_ecology"
                    />
                <LinearLayout
                    android:id="@+id/recycling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/layout_shape"
                    android:paddingVertical="28dp"
                    android:paddingHorizontal="34dp"
                    android:layout_marginHorizontal="13dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/ro3boye5o4b8"
                        android:layout_width="141dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/r9sd20ksjpia"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="16sp"
                            android:layout_marginBottom="4dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/my_waste_pick_up"
                            />
                        <TextView
                            android:id="@+id/rak8oaqb53ci"
                            android:textSize="12sp"
                            android:textColor="#808080"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/request_for_pick_up"
                            />
                    </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        />
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="fitXY"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rqt06g01fkl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="33dp"
                android:orientation="horizontal">
                <TextView
                    android:textSize="16sp"
                    android:layout_marginEnd="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/more_services"
                    android:textColor="#808080"
                    />

            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                >
                <LinearLayout
                    android:id="@+id/pickup"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_shape"
                    android:paddingVertical="16dp"
                    android:orientation="vertical">
                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="34dp"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="fitXY"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pick_up"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:background="@drawable/layout_shape"
                    android:id="@+id/education"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="34dp"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="fitXY"
                        />
                    <TextView
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/education"
                        />
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:id="@+id/recycling_button"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_shape"
                    android:paddingVertical="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/rrct4gpp05v"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="34dp"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="fitXY"
                        />
                    <TextView
                        android:id="@+id/rllben92co0b"

                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Recycling"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
            android:id="@+id/r03tfniwsl2se"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/map"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_shape"
                android:paddingVertical="16dp"
                android:orientation="vertical">
                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="34dp"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

                <LinearLayout
                    android:id="@+id/pickupWorker"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_shape"
                    android:paddingVertical="16dp"
                    android:orientation="vertical">
                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="34dp"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="fitXY"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="pickup 2"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>